# trade-compliance-classification-engine

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  PRODUCT.md  README.md  build.rs  docker-compose.prod.yml  docker-compose.yml  llms.txt  mcp.json  openapi.yaml  package-lock.json  package.json  playwright.config.ts
.agent/rules/: CODEBASE_CONTEXT.md  CODING_STANDARDS.md  CODING_STANDARDS_DOMAIN.md  CODING_STANDARDS_META.md  CODING_STANDARDS_TESTING.md  CODING_STANDARDS_TESTING_E2E.md  CODING_STANDARDS_TESTING_LIVE.md  CODING_STANDARDS_TESTING_LOGIC.md  COLLABORATION_RULES.md  _index.md  (+1 more)
.sqlx/: README.md
docs/: ai-contributor-guide.md  branching.md  deployment.md  klevar-yolo-runtime.md  pr-checklist.md  traceability.md
migrations/: .keep  20260524000700_core_schema.sql  20260524000701_core_schema_hardening.sql  20260524000702_auth_security_hardening.sql  20260524000800_rule_pack_immutability.sql  20260524000801_rule_pack_activation_gates.sql  20260524000802_business_logic_drift_fixes.sql  20260524000900_phase2_review_audit.sql
scripts/: klevar-yolo.ps1  klevar-yolo.sh  playwright-webserver.mjs  scan-secrets.ps1  scan-secrets.sh
src/: app.rs  backtest.rs  cache.rs  config.rs  errors.rs  lib.rs  main.rs  setup.rs  telemetry.rs
tests/: batch008_core.rs  batch009_core.rs  core_api.rs  foundation_config.rs  foundation_shared.rs  frontend_baseline_contract.rs  modularity_contract.rs  phase2_review_audit.rs  phase2_ui_contract.rs  phase3_integrations_backtest.rs  progress_contract.rs  security_audit.rs  tooling_contract.rs
(+154 files in other folders)
