[package]
name = "trade-compliance-classification-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
build = "build.rs"

[lib]
name = "trade_compliance_classification_engine"
path = "src/lib.rs"

[[bin]]
name = "trade-compliance-classification-engine"
path = "src/main.rs"

[[bin]]
name = "setup"
path = "src/bin/setup.rs"
test = false

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
proptest = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
testcontainers = "0.23"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
